# Planters

./: .gitignore  README.md  app_streamlit.py  autonomous_agent.py  design.md  planter_compositor.py  pyproject.toml  requirements.txt
agent_output/20260716_221434/: results.json
agent_output/20260716_221848/: results.json
agent_output/20260716_223236/: results.json
agent_output/20260716_223534/: results.json
agent_output/20260716_223704/: results.json
agent_output/20260716_224838/: results.json
agent_output/20260716_230048/: results.json
agent_output/20260717_120646/: results.json
agent_output/20260717_123434/: results.json
agent_output/20260717_143017/: results.json
