[project]
name = "planter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.45.0",
    "openai-agents>=0.18.2",
    "numpy>=1.26.4",
    "opencv-python-headless>=4.10.0.84",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-image",
    "streamlit>=1.59.2",
    "ultralytics>=8.4.96",
]
